# doodle-game

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  doodleapplication.cpp  doodleapplication.h  main.cpp
libs/doodle-lib/: CMakeLists.txt  README.md  animatedsprite.cpp  animatedsprite.h  contactlistener.cpp  contactlistener.h  doodle-lib_global.h  doodlelib.cpp  doodlelib.h  enemyentity.cpp  enemyentity.h  entity.cpp  entity.h  entityconstructor.cpp  entityconstructor.h  entityrenderer.cpp  entityrenderer.h  gamelogic.cpp  gamelogic.h  gamescene.cpp  gamescene.h  playerentity.cpp  playerentity.h  pybindexample.cpp  pybindexample.h  spriteanimator.cpp  spriteanimator.h  view.cpp  view.h
libs/ml-lib/: CMakeLists.txt  agent.cpp  agent.h  doodleenv.cpp  doodleenv.h  dqn.cpp  dqn.h  exampleservice.cpp  exampleservice.h  ml-lib_global.h  mlclient.cpp  mlclient.h  mllib.cpp  mllib.h  mlserver.cpp  mlserver.h  mlview.cpp  mlview.h  pybindexample.cpp  pybindexample.h
libs/ml-lib/test/: CMakeLists.txt  MLServerWebsocketClientTests.cpp  mllibtest.cpp  mlservertest.cpp  websockettestclient.cpp  websockettestclient.h
